--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Izzat bin Mohamad Sarpin
 #logo: /assets/img/prajindra-removebg-preview-Photoroom.jpg
-#description: Senior Lecturer | AI & Data Analytics in Energy | Smart Grid & Renewable Energy Solutions
+description: Senior Lecturer | AI & Data Analytics in Energy | Smart Grid & Renewable Energy Solutions
 #show_downloads: true
 theme: jekyll-theme-cayman
