--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Izzat bin Mohamad Sarpin
 logo: /assets/img/photo_2025-03-19_14-34-04.jpg
 description: Senior Lecturer | AI & Data Analytics in Energy | Smart Grid & Renewable Energy Solutions
 #show_downloads: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
